--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ div.gallery:hover {
 
 div.gallery img {
     width: 100%;
-    height: 100px;
+    height: 100%;
 }
 
 div.desc {
@@ -44,6 +44,18 @@ div.container-fluid{
 
 .carousel {
   background-color:rgb(127, 127, 127);
+}
+
+.carousel-caption {
+    position: absolute;
+    left: 1000px;
+    width: 50%;
+    height: 50%;
+    bottom:0;
+    right:0;
+}
+
+.carousel-image {
 }
 
 footer {
