--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ div.desc {
     padding: 15px;
     text-align: center;
 }
+
 hr {
     border-width: 3px;
 }
@@ -48,16 +49,10 @@ div.container-fluid{
 }
 
 .carousel-caption {
-    position: absolute;
-    left: auto;
-    right: auto;
-    width: 50%;
+    width: 75%;
     height: 100%;
-    background-color: #428bca;
-    opacity: 0.8;
-    bottom:0;
-    right:0;
     margin-left:25%;
+    margin-right:25%;
 }
 
 .carousel-image {
@@ -89,4 +84,13 @@ div.thumbnail img {
   padding-right:120px;
   padding-bottom:20px;
   padding-top:15px;
+}
+
+.subcaption {
+  padding-right:0;
+  color:rgb(127, 127, 127);
+}
+
+.caption-title {
+  margin-top:0;
 }
