--- a/styles.css
+++ b/styles.css
@@ -86,9 +86,12 @@ div.thumbnail img {
   padding-bottom: 25px;
   padding-left:0;
   padding-right:50px;
+  margin-bottom:auto;
+  margin-top:auto;
   width:100%;
+  height:100%;
 }
-.carousel img {padding-top: 20px;}
+
 .carousel h2 {color: #0072b5;}
 .carousel col-lg-4 p {text-align: center;}
 
@@ -96,4 +99,9 @@ div.thumbnail img {
   padding-right:0;
   margin-left:15%;
   margin-right:15%;
+}
+
+.carousel-image{
+  padding-top:0;
+  padding-bottom:0;
 }
