--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,10 @@ p {
   color:rgb(127, 127, 127);
 }
 
+.thumbnail-zoom {
+  transform: scale(1.05);
+}
+
 #index-background {
     background-image: url(pictures/background.gif);
     height:1000px;
